<resources>
<string name="EMI">Equated monthly installment</string>
<string name="E_notation">Use scientific notation</string>
<string name="_5_stars">5 stars if you love it!</string>
<string name="abc_action_bar_home_description">Navigate home</string>
<string name="abc_action_bar_up_description">Navigate up</string>
<string name="abc_action_menu_overflow_description">More options</string>
<string name="abc_action_mode_done">Done</string>
<string name="abc_activity_chooser_view_see_all">See all</string>
<string name="abc_activitychooserview_choose_application">Choose an app</string>
<string name="abc_capital_off">OFF</string>
<string name="abc_capital_on">ON</string>
<string name="abc_menu_alt_shortcut_label">Alt+</string>
<string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
<string name="abc_menu_delete_shortcut_label">delete</string>
<string name="abc_menu_enter_shortcut_label">enter</string>
<string name="abc_menu_function_shortcut_label">Function+</string>
<string name="abc_menu_meta_shortcut_label">Meta+</string>
<string name="abc_menu_shift_shortcut_label">Shift+</string>
<string name="abc_menu_space_shortcut_label">space</string>
<string name="abc_menu_sym_shortcut_label">Sym+</string>
<string name="abc_prepend_shortcut_label">Menu+</string>
<string name="abc_search_hint">Search…</string>
<string name="abc_searchview_description_clear">Clear query</string>
<string name="abc_searchview_description_query">Search query</string>
<string name="abc_searchview_description_search">Search</string>
<string name="abc_searchview_description_submit">Submit query</string>
<string name="abc_searchview_description_voice">Voice search</string>
<string name="abc_shareactionprovider_share_with">Share with</string>
<string name="abc_shareactionprovider_share_with_application">Share with %s</string>
<string name="abc_toolbar_collapse_description">Collapse</string>
<string name="addToCalendar">Add to calendar</string>
<string name="age">Age</string>
<string name="amount">Amount</string>
<string name="and">and</string>
<string name="angle">Angle</string>
<string name="app_name">Simple Calculator</string>
<string name="app_name_test">Simple Calculator Test</string>
<string name="area">Area</string>
<string name="auto_mode_setted">auto mode</string>
<string name="balance">Balance</string>
<string name="banner_bottom">Banner at bottom</string>
<string name="banner_top">Banner at top</string>
<string name="birthDay">Birth day</string>
<string name="bmi">BMI</string>
<string name="bmi_not_valid">"This BMI doesn't look right. Make sure the height and weight you entered are correct."</string>
<string name="bmi_share">My BMI is</string>
<string name="calcError">Calculation Error</string>
<string name="calculatedBy">Calculated by</string>
<string name="cgst_sgst">CGST/SGST :</string>
<string name="changeColor">Change color</string>
<string name="changeFont">Change font</string>
<string name="changeLanguage">Change language</string>
<string name="changeNumbersSize">Change numbers size</string>
<string name="change_comma_position">Change comma position</string>
<string name="change_format">Change number format</string>
<string name="change_numerals">Change numerals</string>
<string name="choseDeifferentNumerals">You change to any numerals in settings</string>
<string name="close">Close</string>
<string name="com.crashlytics.android.build_id">2cbfb469b7f14e268707d4663486d8bc</string>
<string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
<string name="control_ads_type">Control ads type</string>
<string name="currency">Currency</string>
<string name="data">Data</string>
<string name="date">Date</string>
<string name="dateOfBirth">Date of birth</string>
<string name="day">Day</string>
<string name="day_mode_setted">day mode</string>
<string name="days">Days</string>
<string name="decimal_places">Change decimal places</string>
<string name="default_format">Default</string>
<string name="default_web_client_id">368882866139-a6m343cj8nr9jhh7h1s2fu53698clkdb.apps.googleusercontent.com</string>
<string name="delete">Delete</string>
<string name="delete_all">Delete all</string>
<string name="difference">Difference</string>
<string name="disableAds">Remove ads</string>
<string name="disableAdsHint">You can remove ads for 1000 minutes, by watching a video until the end</string>
<string name="discount">Discount</string>
<string name="dont_show_again">"Don't show again"</string>
<string name="duplicates_items_selected">Duplicated items selected</string>
<string name="embed_scientific_buttons">Embed scientific buttons</string>
<string name="enable_00">Enable double zero</string>
<string name="enable_000">Enable triple zero</string>
<string name="enable_full_screen">Enable full screen</string>
<string name="enable_keypress_bip">Bip on key press</string>
<string name="enable_keypress_vibrat">Vibrate on key press</string>
<string name="energy">Energy</string>
<string name="error">Error</string>
<string name="finalPrice">Final price</string>
<string name="firebase_database_url">https://simple-calculator-ce891.firebaseio.com</string>
<string name="firstPayment">First payment :</string>
<string name="font">Font</string>
<string name="force">Force</string>
<string name="formatErrMsg">Invalid format used.</string>
<string name="frequency">Frequency</string>
<string name="from">From</string>
<string name="from_time">Start from :</string>
<string name="fuel">Fuel</string>
<string name="gcm_defaultSenderId">368882866139</string>
<string name="get_ad_free_version">Get ad free version</string>
<string name="give">Give</string>
<string name="give_5_stars">Give 5 stars</string>
<string name="go">go</string>
<string name="google_api_key">AIzaSyDH3-n1W7l8I_L2_aInkE3ogPDS7dhrOeo</string>
<string name="google_app_id">1:368882866139:android:c9e77008f28e49c6b8f9fe</string>
<string name="google_crash_reporting_api_key">AIzaSyDH3-n1W7l8I_L2_aInkE3ogPDS7dhrOeo</string>
<string name="google_storage_bucket">simple-calculator-ce891.appspot.com</string>
<string name="gst">GST</string>
<string name="hide_buttons">Hide buttons</string>
<string name="hide_calculator_mode_icon">Hide calculator mode icon</string>
<string name="hide_engineering_hint">It will be hidden automatically when auto rotation is enabled</string>
<string name="hide_history_icon">Hide history icon</string>
<string name="hide_night_mode_icon">Hide night mode icon</string>
<string name="hide_settings_btn">Hide settings button</string>
<string name="hide_settings_hint">Please remember, you can always access settings by long pressing the decimal point</string>
<string name="hide_settings_icon">Hide settings icon</string>
<string name="hide_unit_converter_icon">Hide unit converter icon</string>
<string name="history">History</string>
<string name="hour">Hour</string>
<string name="hours">Hours</string>
<string name="information">Information</string>
<string name="interest">Interest</string>
<string name="interestAnnualRate">Interest annual rate :</string>
<string name="is">is :</string>
<string name="keep_record">Remember last calculation</string>
<string name="keep_screen">Keep screen on</string>
<string name="lastUpdated">Last updated</string>
<string name="length">Length</string>
<string name="loadingPleaseWait">Loading. Please wait…</string>
<string name="loan">Loan</string>
<string name="loanAmount">Loan amount :</string>
<string name="loanTerm">Loan term :</string>
<string name="longOperation">Long operation</string>
<string name="long_press_decimal_hint">You can always access settings by long pressing decimal button</string>
<string name="manage_task_bar_btns">Manage task bar buttons</string>
<string name="mass">Mass</string>
<string name="minute">Minute</string>
<string name="minutes">Minutes</string>
<string name="month">Month</string>
<string name="months">Months</string>
<string name="nextBirthday">Next birthday</string>
<string name="night_mode_setted">night mode</string>
<string name="noCalendar">No calendar found !</string>
<string name="noHistory">There is no history.</string>
<string name="noZeorDivisor">Cannot divide by zero.</string>
<string name="normal">Normal</string>
<string name="numeralsystem">Numeral System</string>
<string name="obesity">Obesity</string>
<string name="of">of</string>
<string name="offline_notification_text">Tap to open ad</string>
<string name="offline_notification_title">View the ad you saved when you were offline</string>
<string name="offline_opt_in_confirm">OK</string>
<string name="offline_opt_in_confirmation">"You'll get a notification with the link when you're back online"</string>
<string name="offline_opt_in_decline">No thanks</string>
<string name="offline_opt_in_message">"We'll send you a notification with a link to the advertiser site."</string>
<string name="offline_opt_in_title">"Open ad when you're back online."</string>
<string name="originalPrice">Original price</string>
<string name="oriontation_error">please enable screen rotation and rotate your phone</string>
<string name="other_apps">Other apps</string>
<string name="overweight">Overweight</string>
<string name="people">People</string>
<string name="popups">Occasional Pop-ups</string>
<string name="power">Power</string>
<string name="pressure">Pressure</string>
<string name="principal">Principal</string>
<string name="privacy_policy">Privacy policy</string>
<string name="project_id">simple-calculator-ce891</string>
<string name="rate_text_1">We are a small team dedicated to developing the best free aps for you !</string>
<string name="rate_text_2">Your 5 stars rating means a lot for us !</string>
<string name="remaingMinutes">Remaining minutes :</string>
<string name="removeAllitems">Remove all items ?</string>
<string name="removeItems">Remove items</string>
<string name="removeSelectedItems">Remove selected items ?</string>
<string name="repeatCalc">Repeat calculation</string>
<string name="repeatCalcHint">When equal is pressed more than once</string>
<string name="report_problem">Report a problem</string>
<string name="reset">Reset</string>
<string name="reset_settings">Reset settings</string>
<string name="restartLater">Restart later</string>
<string name="restartMsg">New font will be applied after application restart</string>
<string name="restartNow">Restart now</string>
<string name="restartRequired">Restart required</string>
<string name="rewardAdNotLoaded">Video not loaded, please check your connection or try again later.</string>
<string name="rsUndefined">Result undefined.</string>
<string name="s1">Save image</string>
<string name="s2">Allow Ad to store image in Picture gallery?</string>
<string name="s3">Accept</string>
<string name="s4">Decline</string>
<string name="s5">Create calendar event</string>
<string name="s6">Allow Ad to create a calendar event?</string>
<string name="s7">Test Ad</string>
<string name="search_menu_title">Search</string>
<string name="selectItems">Select Items</string>
<string name="send_suggestion">Send suggestions</string>
<string name="set_auto_night_time">Set auto night mode time</string>
<string name="settings">Settings</string>
<string name="settings_will_apply_after_restart">Setting will be applied after application restart</string>
<string name="share">Share</string>
<string name="shareAge">My age is</string>
<string name="shareDate">The difference between</string>
<string name="share_app">Share App</string>
<string name="share_text">the best calculator that Perform basic and scientific calculations easily.</string>
<string name="spaceExeeds">Result exceeds space available.</string>
<string name="speed">Speed</string>
<string name="splitamount">Split Amount</string>
<string name="suggestion">Suggestions</string>
<string name="to">To</string>
<string name="to_time">End with :</string>
<string name="version">version</string>
<string name="year">Year</string>
<string name="years">Years</string>
</resources>