<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/fonctionButtonsBackgroundColor" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
		<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
			<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
				<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="fromDate">
					<TextView android:textSize="@dimen/dummy_ae_88" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/from" />
					<TextView android:textSize="@dimen/dummy_ae_88" android:gravity="end" android:id="@id/from" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/textColorStyle" />
				</LinearLayout>
				<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:onClick="toDate">
					<TextView android:textSize="@dimen/dummy_ae_88" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/to" />
					<TextView android:textSize="@dimen/dummy_ae_88" android:gravity="end" android:id="@id/to" android:layout_width="fill_parent" android:layout_height="fill_parent" />
				</LinearLayout>
			</LinearLayout>
			<LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/controlLayout" android:background="@drawable/date_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="20.0dip" android:elevation="2.0dip">
				<TextView android:textSize="@dimen/numbers_text_size" android:gravity="center" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/difference" style="@style/textColorStyle" />
				<TextView android:layout_width="fill_parent" style="@style/line_separator" />
				<LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip">
					<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="35.0dip" android:layout_marginEnd="35.0dip">
						<TextView android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/years" />
						<TextView android:id="@id/years" android:layout_width="wrap_content" style="@style/date_difference_tv" />
					</LinearLayout>
					<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="35.0dip" android:layout_marginEnd="35.0dip">
						<TextView android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/months" />
						<TextView android:id="@id/months" style="@style/date_difference_tv" />
					</LinearLayout>
					<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
						<TextView android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/days" />
						<TextView android:id="@id/days" style="@style/date_difference_tv" />
					</LinearLayout>
				</LinearLayout>
				<TextView style="@style/line_separator" />
				<LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="40.0dip" android:layout_marginBottom="40.0dip">
					<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="35.0dip" android:onClick="fromDate" android:layout_marginEnd="35.0dip">
						<TextView android:textSize="@dimen/numbers_text_size" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/from" style="@style/textColorStyle" />
						<TextView android:gravity="center" android:id="@id/from2" android:layout_width="wrap_content" android:layout_height="wrap_content" />
					</LinearLayout>
					<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:onClick="toDate">
						<TextView android:textSize="@dimen/numbers_text_size" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/to" style="@style/textColorStyle" />
						<TextView android:gravity="center" android:id="@id/to2" android:layout_width="wrap_content" android:layout_height="wrap_content" />
					</LinearLayout>
				</LinearLayout>
				<TextView android:textSize="10.0sp" android:id="@id/poweredBy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
	<TextView android:textSize="@dimen/dummy_ae_88" android:textColor="#ffffffff" android:gravity="center" android:background="@drawable/share_bg" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/share" android:onClick="shareDate" android:textAllCaps="true" />
</LinearLayout>
